@@ -16,7 +16,7 @@
    +----------------------------------------------------------------------+
 */
 
-/* $Id: streams.c,v 1.9 2003/11/17 04:54:27 iliaa Exp $ */
+/* $Id: streams.c,v 1.10 2003/12/12 23:05:19 pollita Exp $ */
 
 /* This file implements cURL based wrappers.
  * NOTE: If you are implementing your own streams that are intended to
@@ -362,7 +362,8 @@ static php_stream_wrapper_ops php_curl_wrapper_ops = {
 	NULL, /* stat url */
 	NULL, /* opendir */
 	NULL, /* label */
-	NULL  /* unlink */
+	NULL, /* unlink */
+	NULL  /* rename */
 };
 
 php_stream_wrapper php_curl_wrapper = {
